SFDCProject/src/objects/Audit_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Criteria</label>
        <referenceTo>Audit_Criteria__c</referenceTo>
        <relationshipLabel>Audit Feedback</relationshipLabel>
        <relationshipName>Audit_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPC_Compliance_Criteria__c</fullName>
        <formula>IF( ISPICKVAL( Audit_Criteria__r.Criteria_Type__c , &apos;EPC Compliance&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC Compliance Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Audit__c</fullName>
        <label>Install Audit</label>
        <referenceTo>Install_Audit__c</referenceTo>
        <relationshipLabel>Audit Feedback</relationshipLabel>
        <relationshipName>Audit_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Point_Value__c</fullName>
        <label>Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Criteria__c</fullName>
        <formula>IF( ISPICKVAL( Audit_Criteria__r.Priority_Criteria__c , &apos;Y&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Score__c</fullName>
        <label>QA Score</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substantial Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Audit Feedback</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Audit Feedback Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Feedback</pluralLabel>
    <recordTypes>
        <fullName>Complex</fullName>
        <active>true</active>
        <label>Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <label>Simple</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>